# slint_test_rust

Rust_Slint/: Cargo.toml  build.rs
Rust_Slint/src/: main.rs  main.slint
Rust_Slint/src/logic/: get_result.rs  sql.rs  util.rs
Rust_Slint/src/ui/: side_bar.slint
Rust_Slint/src/ui/pages/: sn_view.slint
Rust_Slint/ui/: main.slint  menubar.slint
Rust_Slint/ui/pages/: bottom.slint  dialog.slint  sn_view.slint
SurrealismUI-main/src/dialog/: dialog.slint
