[package]
name = "tool_slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[[bin]]
path = "src/main.rs"
name = "slint"

[dependencies]
slint = "1.2.2"
tiberius={version="0.12.2",features = ["chrono","rustls","tds73",],default-features = false}
tokio = { version = "1.32", features = ["full"] }
tokio-util = { version = "0.7.8", features=["compat"]}
chrono =  "0.4"
futures = "0.3"

[build-dependencies]
slint-build = "1.2.2"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
fruitbasket = "0.10.0"

